# humax-mcp

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  progress.txt  pyproject.toml
.claude-project/: HANDOFF.md
.claude-project/memory/: MEMORY.md  aggregator-evcs-per-call-flag.md  audited-file-path-arg-extension.md  bp26-schema-key-findings.md  docs-prd-audience-routing.md  dri-model-claude-ecosystem-pedagogy.md  excel-io-readonly-source-large-file.md  exchange-sanity-prev-business-day.md  golden-template-engine-pattern.md  humax-closing-workflow.md  lecture-plan-playground-sync.md  mcp-tools-overview.md  non-dev-doc-style-analogy-first.md  pandas-multi-key-diff-pattern.md  pytest-httpx-036-api.md  python-vs-llm-role-split-canon.md  raw-vs-aggregated-schema-separation.md  ruff-format-as-advisory-not-blocking.md  validation-order-schema-first.md  verify-sums-org-prefix-rollup.md  vulture-pydantic-v2-false-positives.md  workbook-cache-df-copy-lru.md  write-tool-output-path-safety.md
docs/: PLANS.md  PRODUCT_SENSE.md  QUALITY.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  layer-rules.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/completed/: us-023-fc-month-update-tool.md  v0.1.0-tdd-session.md
docs/harness/: fix-catalog.md  gc-history.md  harness-setup.md  maturity-framework.md  principles.md
docs/prd/: accuracy-speed-improvement.md  data-flow.md  humax-lecture-plan-v2.docx  humax-lecture-plan-v2.md  humax-lecture-plan.md  lecture-plan-playground.html  mcp-design-plan.md
fixtures/templates/: evcs_account.template.json  evcs_account.xlsx  humax_account.template.json  humax_account.xlsx  humax_allocation.template.json  humax_allocation.xlsx
scripts/: build_fixture_templates.py  gc.sh  verify_docs.py
src/humax_excel_mcp/: __init__.py  config.py  server.py
src/humax_excel_mcp/core/: aggregator.py  artifact_hints.py  audit.py  backup.py  errors.py  excel_io.py  fc_report_layout.py  template_bindings.py  template_loader.py  token_guard.py  workbook_cache.py
src/humax_excel_mcp/schemas/: bp26.py  raw_bp26.py  requests.py  responses.py
src/humax_excel_mcp/tools/: __init__.py  allocation_get.py  allocation_set.py  diff.py  exchange.py  extract.py  fc_month_update.py  report.py  restore.py  template_engine.py  verify.py  write.py
tests/: conftest.py
tests/benchmarks/: test_perf_baseline.py
tests/e2e/: test_monthly_close.py  test_real_data.py
tests/integration/: test_mcp_server.py  test_template_chain.py
tests/unit/: test_aggregator.py  test_allocation_get.py  test_allocation_set.py  test_artifact_hints.py  test_backup.py  test_diff.py  test_excel_io.py  test_exchange.py  test_extract.py  test_fc_month_update.py  test_fixture_templates.py  test_fixtures.py  test_report.py  test_restore.py  test_schemas.py  test_template_engine.py  test_token_guard.py  test_verify.py  test_workbook_cache.py  test_write.py
