[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humax-excel-mcp"
version = "0.1.1"
description = "Humax 고정비 결산 MCP 서버 — 10 deterministic Excel tools for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Humax MCP" }]
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]
dev = [
    "ruff>=0.5",
]

[project.scripts]
humax-excel-mcp = "humax_excel_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
humax_excel_mcp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
