[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humax-excel-mcp"
version = "0.1.1"
description = "Humax 고정비 결산 MCP 서버 — 10 deterministic Excel tools for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Humax MCP" }]
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.5",
    "vulture>=2.10",
    "pre-commit>=3.7",
]

[project.scripts]
humax-excel-mcp = "humax_excel_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
humax_excel_mcp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "benchmark: performance baseline measurements (advisory gate)",
]

[tool.coverage.run]
source = ["src/humax_excel_mcp"]
branch = true
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.vulture]
paths = ["src/humax_excel_mcp"]
min_confidence = 80
ignore_names = [
    "register_all",
    "main",
    "build_server",
    "cls",
    "model_config",
]
ignore_decorators = [
    "@audited",
    "@mcp.tool",
    "@pytest.fixture",
    "@field_validator",
    "@model_validator",
    "@classmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

# first-party 명시: pre-commit ruff(pinned)와 로컬 ruff의 isort 그룹핑 합의
[tool.ruff.lint.isort]
known-first-party = ["humax_excel_mcp"]
